--- a/EasyReasy.ByteShelfProvider/EasyReasy.ByteShelfProvider.csproj
+++ b/EasyReasy.ByteShelfProvider/EasyReasy.ByteShelfProvider.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="9.0.7" />
+    <PackageReference Include="ByteShelfClient" Version="1.2.2" />
+    <PackageReference Include="ByteShelfCommon" Version="1.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EasyReasy\EasyReasy.csproj" />
   </ItemGroup>
 
 </Project>
