--- a/ReceiptScanner/ReceiptScanner.csproj
+++ b/ReceiptScanner/ReceiptScanner.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EasyReasy.ByteShelfProvider\EasyReasy.ByteShelfProvider.csproj" />
     <ProjectReference Include="..\EasyReasy\EasyReasy.csproj" />
   </ItemGroup>
 
