--- a/ReceiptScanner/ReceiptScanner.csproj
+++ b/ReceiptScanner/ReceiptScanner.csproj
@@ -19,7 +19,7 @@
 
     <PackageReference Include="OpenCvSharp4" Version="4.11.0.20250507" />
     <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.11.0.20250507" />
-
+    <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.22.1" />
 
     <PackageReference Include="Tesseract" Version="4.1.1" />
   </ItemGroup>
