--- a/ReceiptScannerTests/ReceiptScanner.Tests.csproj
+++ b/ReceiptScannerTests/ReceiptScanner.Tests.csproj
@@ -25,6 +25,8 @@
     <None Remove="TestFiles\SimpleImage.png" />
     <None Remove="TestFiles\TestReceipt01.jpeg" />
     <None Remove="TestFiles\TestReceipt01_Cropped.jpg" />
+    <None Remove="TestFiles\TestReceipt02.jpeg" />
+    <None Remove="TestFiles\TestReceipt03.jpeg" />
   </ItemGroup>
 
   <ItemGroup>
@@ -32,6 +34,8 @@
     <EmbeddedResource Include="TestFiles\SimpleImage.png" />
     <EmbeddedResource Include="TestFiles\TestReceipt01.jpeg" />
     <EmbeddedResource Include="TestFiles\TestReceipt01_Cropped.jpg" />
+    <EmbeddedResource Include="TestFiles\TestReceipt02.jpeg" />
+    <EmbeddedResource Include="TestFiles\TestReceipt03.jpeg" />
   </ItemGroup>
 
 </Project> 
